- if extension section 'all' is clicked then other sections are set to false to 'clear' previous settings - fixed issue where 'all' was searching for '.features.' instead of '.feature'

--- a/branches/2.0/config/welcome2.html
+++ b/branches/2.0/config/welcome2.html
@@ -455,9 +455,9 @@ img.loadTrunks, img.loadQueues {
 				$(e.target).siblings('span').each( function() {
 					$(this).removeClass('active');
 					var title = $(this).attr('title');
-					extension_loads[title] = extension_loads[title]?true:false;
+					extension_loads[title] = false;
 				});
-				$('#extensions_list').find('.sip, .iax, .analog, .features.').show();
+				$('#extensions_list').find('.sip, .iax, .analog, .feature').show();
 			}
 			
 			var title = $(e.target).attr('title');
