--- a/config/users.html
+++ b/config/users.html
@@ -212,23 +212,30 @@
 						<input type='checkbox' id='edit_3wayCalling'>
 						<label for='edit_3wayCalling'>3-Way Calling</label>
 						<img src="images/tooltip_info.gif" tip="en,users,14" class='tooltipinfo'>
-
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;
 						<input type='checkbox' id='edit_inDirectory'>
 						<label for='edit_inDirectory'>In Directory</label>
 						<img src="images/tooltip_info.gif" tip="en,users,9" class='tooltipinfo'>
-
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;
 						<input type='checkbox' id='edit_callWaiting'>
 						<label for='edit_callWaiting'>Call Waiting</label>
 						<img src="images/tooltip_info.gif" tip="en,users,13" class='tooltipinfo'>
-
+						<br>
 						<input type='checkbox' id='edit_cti'>
-						<label for='edit_cti'>CTI</label>
+						<label for='edit_cti'>ADA User</label>
 						<img src="images/tooltip_info.gif" tip="en,users,12" class='tooltipinfo'>
-
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;
 						<input type='checkbox' id='edit_isagent'>
 						<label for='edit_isagent'>Is Agent</label>
 						<img src="images/tooltip_info.gif" tip="en,users,15" class='tooltipinfo'>
-
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;
 						Pickup Group: <select id='edit_pickupgroup'></select>
 
 						</TD>
