--- a/branches/2.0/config/menus.html
+++ b/branches/2.0/config/menus.html
@@ -182,6 +182,7 @@
 							<option value="Wait">Wait</option>
 							<option value="WaitExten">WaitExten</option>
 							<option value="toDestination">Goto Destination</option>
+							<option value="toDestinationByCallerId">Goto Destination by CallerId</option>
 							<option value="setLanguage">Set Language</option>
 							<option value="GotoDirecotry">Goto Directory</option>
 							<option value="DialViaTrunk">Dial a Number via Trunk</option>
@@ -201,6 +202,7 @@
 						<select class='class_newStep_details_td' id="newstep_mohClass"></select>
 						<select class='class_newStep_details_td' id="newstep_disaContext"></select>
 						<select class='class_newStep_details_td' id="newstep_gotoDestination"></select>
+						<select class='class_newStep_details_td' id="newstep_gotoDestinationByCallerId"></select>
 						<select class='class_newStep_details_td' id="newstep_setlanguage">
 							<option value='en'>English</option>
 							<option value='es'>Spanish</option>
