renaming welcome2.js

--- a/branches/2.0/config/welcome2.html
+++ b/branches/2.0/config/welcome2.html
@@ -363,7 +363,7 @@ img.loadTrunks, img.loadQueues {
 <script type="text/javascript" src="js/jquery.tablesorter.js"></script>
 <script type="text/javascript" src="js/jquery.tablesorter.pager.js"></script>
 <script type="text/javascript" src="js/astman.js"></script>
-<script type="text/javascript" src="js/welcome2.js"></script>
+<script type="text/javascript" src="js/welcome.js"></script>
 <script type="text/javascript" src="js/sysinfo.js"></script>
 <script type="text/javascript">
 
