--- a/config/home.html
+++ b/config/home.html
@@ -27,7 +27,7 @@ var setLoggedIn = function(a){
 	parent.ASTGUI.dialog.hide();
 	DOM_username.disabled = true;
 	DOM_secret.disabled = true ;
-	try{ if (a.welcome_redirect == true){ window.location.href = 'welcome2.html'; } }catch(err){ }
+	try{ if (a.welcome_redirect == true){ window.location.href = 'welcome.html'; } }catch(err){ }
 };
 
 var localajaxinit = function(){
