--- a/config/callingrules.html
+++ b/config/callingrules.html
@@ -63,7 +63,7 @@
 
 <center>
 	<div style='text-align:center; 	background-color : #FFFFFF; width: 95%; padding: 5px; margin-left: 1px; margin-top:14px; margin-bottom:20px; border:1px solid #CDCDCD; color: #575757 ' class='lite'>
-	An outgoing calling rule pairs an extension pattern with a trunk used to dial the pattern. This allows different patterns to be dialed through different trunks (e.g. "local" 7-digit dials through a PRI but "long distance" 10-digit dials through a low-cost SIP trunk). You can optionally set a failover trunk to use when the primary trunk fails. Note that this panel manages only individual outgoing call rules. See the Dial Plans <hyperlink> section to associate multiple outgoing calling rules to be used for User outbound dialing.
+	An outgoing calling rule pairs an extension pattern with a trunk used to dial the pattern. This allows different patterns to be dialed through different trunks (e.g. "local" 7-digit dials through an FXO but "long distance" 10-digit dials through a low-cost SIP trunk). You can optionally set a failover trunk to use when the primary trunk fails. Note that this panel manages only individual outgoing call rules. See the Dial Plans <hyperlink> section to associate multiple outgoing calling rules to be used for User outbound dialing.
 	</div>
 </center>
 
