--- a/config/users.html
+++ b/config/users.html
@@ -88,7 +88,7 @@
 						<TD>	<input id="new_ext" size=5  field_name='Extension' validation='numeric' required='yes'>
 							<img src="images/tooltip_info.gif" tip="en,users,0" class='tooltipinfo'>
 						</TD>
-						<TD align="left">Name: <input id="edit_fullname" size=14>
+						<TD align="left">CallerID Name: <input id="edit_fullname" size=14>
 							<img src="images/tooltip_info.gif" tip="en,users,1" class='tooltipinfo'>
 						</TD>
 						<TD align="right">DialPlan: <select id='edit_user_dialplan'></select>
@@ -96,13 +96,13 @@
 						</TD>
 					</TR>
 					<TR>	
-						<TD align='right'>CallerID:</TD>
+						<TD align='right'>Internal CallerID:</TD>
 						<TD>	<span id='edit_callerid_span'></span>
 							<img src="images/tooltip_info.gif" tip="en,users,4" class='tooltipinfo'>
 						</TD>
 						<TD align='left'>
 							
-							OutBound CallerID: <input id='edit_OutBoundCallerid' size=12>
+							CallerID Number: <input id='edit_OutBoundCallerid' size=12>
 							<img src="images/tooltip_info.gif" tip="en,users,27" class='tooltipinfo'>
 						</TD>
 						<TD align='left'></TD>
