--- a/branches/2.0/config/ringgroups.html
+++ b/branches/2.0/config/ringgroups.html
@@ -104,7 +104,6 @@
 				<select id="select_fromlistofchannels" style="width: 240px" size=8></select>
 			</td>
 		</tr>
-
 		<tr>	<td colspan=3>
 				<fieldset>
 				<legend>&nbsp;Ring Group Options :&nbsp;</legend>
@@ -121,6 +120,9 @@
 					</tr>
 					<tr>	<td align="right" class="field_text">If not answered Goto :&nbsp;</td>
 						<td><select id='rg_fb_select' dfalt='Hangup' required='yes'></select></td>
+					</tr>
+					<tr>	<td align="right" class="field_text">Ignore redirections :&nbsp;</td>
+						<td><input type='checkbox' id='edit_ignoreRedir'></td>
 					</tr>
 					<tr>	<td align="right" colspan=2 height=10></td>
 					</tr>
