--- a/branches/2.0/config/update_phonefirmware.html
+++ b/branches/2.0/config/update_phonefirmware.html
@@ -29,7 +29,7 @@ var update_firmware = function(){
 			try{
 				var ta = 'Finished downloading firmware !' +
 					'\n Please reboot the appliance for the new firmware to be effective.' +
-					'\n Note: The reboot process might take 4 to 8 minutes. '
+					'\n Note: The reboot process might take 4 to 8 minutes. ';
 				alert(ta);
 				return;
 			}finally{
