--- a/config/reboot.html
+++ b/config/reboot.html
@@ -50,10 +50,10 @@ var localajaxinit = function(){
 	</div>
 	<center><div id="tabbedMenu"></div></center>
 
-	<div class='lite_Heading'> Reboot Appliance </div>
+	<div class='lite_Heading'> Reboot Asterisk </div>
 	<center>
 	<div style='text-align:center; width: 500px; margin:20px' class='lite'>
-		Warning: Rebooting the appliance will terminate all active calls.
+		Warning: Rebooting Asterisk will terminate all active calls.
 	</div>
 	</center>
 	<div style='text-align:center; width: 95%; margin-top:40px'>
