- standardized CSS to CODING-GUIDELINES - removed commented (unused) CSS styling

--- a/branches/2.0/config/features.html
+++ b/branches/2.0/config/features.html
@@ -20,23 +20,35 @@
 -->
 <link href="stylesheets/schwing.css" media="all" rel="Stylesheet" type="text/css" />
 <style type="text/css">
-	#Table_applicationMap_definitions {
-		border: 1px solid #666666;
-		margin-top: 5px;
-		margin-bottom:10px;
-		width: 96%;
-		text-align: center;
-		padding : 1px;
-	}
-	#Table_applicationMap_definitions tr.frow { background: #6b79a5; color: #CED7EF; }
-	#Table_applicationMap_definitions tr.frow td{ font-weight:bold; }
-	#Table_applicationMap_definitions tr td{ padding : 3px; }
-	#Table_applicationMap_definitions tr.even { background: #DFDFDF; }
-	#Table_applicationMap_definitions tr.odd{ background: #FFFFFF; }
-	/*#Table_applicationMap_definitions tr.even:hover, #Table_applicationMap_definitions tr.odd:hover {
-		background: #a8b6e5;
-		cursor: default;
-	}*/
+#Table_applicationMap_definitions {
+	border: 1px solid #666666;
+	margin-top: 5px;
+	margin-bottom:10px;
+	width: 96%;
+	text-align: center;
+	padding : 1px;
+}
+
+#Table_applicationMap_definitions tr.frow { 
+	background: #6b79a5; 
+	color: #CED7EF; 
+}
+
+#Table_applicationMap_definitions tr.frow td { 
+	font-weight:bold; 
+}
+
+#Table_applicationMap_definitions tr td { 
+	padding : 3px; 
+}
+
+#Table_applicationMap_definitions tr.even { 
+	background: #DFDFDF; 
+}
+
+#Table_applicationMap_definitions tr.odd { 
+	background: #FFFFFF; 
+}
 
 </style>
 
