- moved localajaxinit() from js/features.js into features.html 	- this is in accordance to CODING_GUIDELINES. js/*.js files 	  are considered to be libraries and init functions are 	  custom to the loading page therefore should be placed 	  in that page.

--- a/branches/2.0/config/features.html
+++ b/branches/2.0/config/features.html
@@ -190,4 +190,38 @@ body {
 <script src="js/features.js"></script>
 <script src="js/jquery.tooltip.js"></script>
 <script src="js/jquery.autocomplete.js"></script>
+<script type="text/javascript">
+
+var localajaxinit = function(){
+	top.document.title = 'Call Parking preferences' ;
+
+	ASTGUI.tabbedOptions( _$('tabbedMenu') , [
+		{	url: '#',
+			desc: 'Feature Codes',
+			click_function: function(){ $('.Features_tabs').hide(); $('#featurecode_settings_container').show(); }
+		},{
+			url: '#',
+			desc: 'Call Parking',
+			click_function: function(){ $('.Features_tabs').hide(); $('#callparking_settings_container').show(); }
+		},{
+			url: '#',
+			desc: 'Application Map',
+			click_function: function(){ $('.Features_tabs').hide(); $('#applicationMap_settings_container').show(); }
+		},{
+			url: '#',
+			desc: 'Dial Options',
+			click_function: function(){ $('.Features_tabs').hide(); $('#DialOptions_settings_container').show(); }
+		}
+		
+	]);
+
+	try{
+		load_preferences();
+	}catch(err){
+
+	}finally{
+		$('#tabbedMenu').find('A:eq(0)').click();
+	}
+};
+</script>
 </body>
