- standardized existing CSS in timeintervals.html

--- a/branches/2.0/config/timeintervals.html
+++ b/branches/2.0/config/timeintervals.html
@@ -36,11 +36,27 @@
 		padding : 1px;
 	}
 
-	#table_tilist tr.frow { background: #6b79a5; color: #CED7EF; }
-	#table_tilist tr.frow td { font-weight:bold; }
-	#table_tilist tr td { padding : 3px; }
-	#table_tilist tr.even { background: #DFDFDF; }
-	#table_tilist tr.odd { background: #FFFFFF; }
+	#table_tilist tr.frow { 
+		background: #6b79a5; 
+		color: #ced7ef; 
+	}
+
+	#table_tilist tr.frow td { 
+		font-weight:bold;
+       	}
+
+	#table_tilist tr td { 
+		padding : 3px; 
+	}
+
+	#table_tilist tr.even { 
+		background: #dfdfdf; 
+	}
+
+	#table_tilist tr.odd { 
+		background: #ffffff; 
+	}
+
 	#table_tilist tr.even:hover, #table_tilist tr.odd:hover {
 		background: #a8b6e5;
 		cursor: default;
