- default top.session.log is now false - loadGUI now sets both top.session.log or sessionData.DEBUG_MODE to true if either are true

--- a/branches/2.0/config/index.html
+++ b/branches/2.0/config/index.html
@@ -329,7 +329,7 @@ var sessionData = {
 <script>
 	var session = {
 		debug_log: [],
-		log: true,
+		log: false,
 		log_modes: {
 			ajax: true,
 			console: true,
