- merged latest changes from astman_revamp branch

--- a/branches/2.0/config/sysinfo.html
+++ b/branches/2.0/config/sysinfo.html
@@ -58,7 +58,7 @@ var localajaxinit = function(){
 							try{
 								percentage_usage(output);
 							}catch(err){
-								ASTGUI.Log.Debug( '<B>Error Trying to calculate CF usage %');
+								top.log.debug( '<B>Error Trying to calculate CF usage %');
 							}
 						}
 						$('.hideall').hide();
