--- a/branches/2.0/config/upload_form.html
+++ b/branches/2.0/config/upload_form.html
@@ -14,7 +14,7 @@ function localinit(){
 
 function beforeupload(){
 	if(!frm.action){
-		parent.ASTGUI.Log.Error('AG101');
+		top.log.error('AG101');
 		alert('Aborting Upload : Error Code  AG101');
 		return;
 	}
