--- a/branches/2.0/config/welcome.html
+++ b/branches/2.0/config/welcome.html
@@ -409,7 +409,7 @@ img.loadTrunks, img.loadQueues {
 				try{
 					percentage_usage(output);
 				}catch(err){
-					ASTGUI.Log.Debug( '<B>Error Trying to calculate CF usage %');
+					top.log.debug( '<B>Error Trying to calculate CF usage %');
 				}
 			}
 			break;
